--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 	<title>Choco Boom New</title>
 	<link rel="icon" href="img/icone.png">
 	<script src="https://kit.fontawesome.com/f8d0d04345.js" crossorigin="anonymous"></script>
+
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
+
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" href="style.css">
 </head>
